--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,8 +36,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { python: "3.10", os: "ubuntu-latest", session: "tests" }
-          - { python: "3.10", os: "windows-latest", session: "tests" }
+          - { python-version: "3.10", os: "ubuntu-latest", session: "tests" }
+          - { python-version: "3.10", os: "windows-latest", session: "tests" }
 
     env:
       FORCE_COLOR: "1"
