--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ Changelog = "https://github.com/Wilhelmsson177/python-test-project/releases"
 [tool.poetry.dependencies]
 python = "^3.10"
 click = ">=8.0.1"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
