--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -92,3 +92,5 @@ jobs:
         run: poetry run pytest --cov-report=xml
       - name: Python Cov
         uses: orgoro/coverage@v2.1
+        with:
+          token: ${{secrets.WORKFLOW_TOKEN}}
