--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -95,3 +95,8 @@ jobs:
         with:
           coverageFile: cov.xml
           token: ${{secrets.WORKFLOW_TOKEN}}
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: report.html
