--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ show_error_context = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-addopts = "--cov=adop_blex --cov-report html --cov-report xml:cov.xml --cov-branch --html=report.html --self-contained-html"
+addopts = "--cov=ptp --cov-report html --cov-report xml:cov.xml --cov-branch --html=report.html --self-contained-html"
 
 
 [build-system]
