--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,6 @@
     "coverage-gutters.coverageFileNames": [
         "cov.xml",
     ],
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
 }
